# bootstrap

./: .env.fly.example  .gitignore  .lychee.toml  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  openapi.json  package.json  pnpm-lock.yaml
.claude/: instructions.md  skill_index.md
.claude/skills/: doc_sync.skill.md  refactor_safe.skill.md  vue_perf_tune.skill.md
.github/workflows/: auto-refactor.yml  ci.yml  deploy.yml  doc-test.yml  repo-garden.yml
.husky/: post-commit  pre-commit
.opencode/command/: backend.md  doc-sync.md  frontend.md  infra.md  review.md  simplify.md  testing.md
agents/: infra.agent.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: api.py  db.py  settings.py
backend/scripts/: export_openapi.py  mutation-test.sh
backend/tests/: test_db.py  test_health.py  test_properties.py  test_settings.py
constitution/: forbidden_actions.md
docs/: TUTORIAL.md
extras/agents/: backend.agent.md  documentation.agent.md  frontend.agent.md  reviewer.agent.md  testing.agent.md
extras/claude-skills/: api_evolution_safe.skill.md  ci_fix.skill.md  post_commit_doc_sync.skill.md  refactor_safe.skill.md  (+2 more)
frontend/: .eslintrc.cjs  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  stryker.config.json  tsconfig.json  vite.config.ts  vitest.config.ts
infra/: .env.fly.example  fly-secrets.sh  fly-setup.sh  fly.backend.toml  fly.frontend.toml  init.sql  postgres-vps.md
scripts/: init.sh  new-feature.sh  tutorial.sh
(+25 files in other folders)
